--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@font-face {
+    font-family: "Provicali";
+    src: local("Provicali"),
+      url("./fonts/Provicali.ttf") format("truetype");
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  @font-face {
+    font-family: "Ranade";
+    src: local("Ranade-Regular"),
+      url("./fonts/Ranade-Regular.ttf") format("truetype");
   }
-  to {
-    transform: rotate(360deg);
+  @font-face {
+    font-family: "Chillax";
+    src: local("Chillax-Medium"),
+      url("./fonts/Chillax-Medium.ttf") format("truetype");
   }
-}
+  @font-face {
+    font-family: "GeneralSans";
+    src: local("GeneralSans-Regular"),
+      url("./fonts/GeneralSans-Regular.ttf") format("truetype");
+  }
+  @font-face {
+    font-family: "Satoshi";
+    src: local("Satoshi-Regular"),
+      url("./fonts/Satoshi-Regular.ttf") format("truetype");
+  }
+  *{
+    padding: 0%;
+    margin: 0%;
+  }
+  body {
+    background-color: #111927;
+  }
